--- a/views/random.ejs
+++ b/views/random.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Your random GenX-year is:
-        <%= Math.floor(Math.random()*10)+1990 %>
+        <%= tempNum %>
     </h1>
 </body>
 </html>
