--- a/views/yads.ejs
+++ b/views/yads.ejs
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h4>Danh sách học viên khóa YAD Bootcamp</h4>
+    <!-- EJS will turn a variable array into a string -->
+    <h4><%= yadMember %></h4>
     <ul>
         <% for ( let yad of yadMember ) { %>
             <li><%= yad %></li>
