--- a/views/subreddit.ejs
+++ b/views/subreddit.ejs
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= name %></title>
+    <title><%= subreddit %></title>
 </head>
 <body>
-    <h1>You're browsing topic: <%= name %></h1>
+    <h1>You're browsing topic: <%= subreddit %></h1>
+    <h3>Topic: <%= data.name %></h3>
+    <h4>Total subscribers: <%= data.subscribers %></h4>
+
+    <% for (let post of posts) { %>
+        <div>
+            <p><%= post.title %> - <span><b><%= post.author %></b></span></p>
+            <% if (post.img) { %>
+                <img src="<%= post.img %>" alt="">
+            <% } %>
+        </div>
+        <hr>
+    <% } %>
 </body>
 </html>
