--- a/views/subreddit.ejs
+++ b/views/subreddit.ejs
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= subreddit %></title>
+    <title><%= name %></title>
 </head>
 <body>
-    <h1>You're browsing topic: <%= subreddit %></h1>
-    <h3>Topic: <%= data.name %></h3>
-    <h4>Total subscribers: <%= data.subscribers %></h4>
+    <h1>You're browsing topic: <%= name %></h1>
+    <h3>Topic: <%= name %></h3>
+    <h4>Total subscribers: <%= subscribers %></h4>
+    <h4><%= description %></h4>
+    <hr>
 
     <% for (let post of posts) { %>
         <div>
